--- a/Integrations/OnboardingIntegration/OnboardingIntegration.yml
+++ b/Integrations/OnboardingIntegration/OnboardingIntegration.yml
@@ -217,7 +217,8 @@ script:
     \ 'PhishingDemo')\nINCIDENTS_PER_MINUTE = int(PARAMS.get('incidents_per_minute',\
     \ '5'))\nMAX_NUM_OF_INCIDENTS = int(PARAMS.get('max_num_of_incidents', '10'))\n\
     INDICATORS_PER_INCIDENT = 5\nINDICATORS_TO_INCLUDE = ['ipv4_private', 'url', 'domain_name',\
-    \ 'sha1', 'sha256', 'md5']\n# About the drop some mean regex right now disable-secrets-detection-start\n\
+    \ 'sha1', 'sha256', 'md5']\nEMAIL_PROTOCOLS = ['POP3', 'IMAP', 'SMTP', 'ESMTP',\
+    \ 'HTTP', 'HTTPS']\n# About the drop some mean regex right now disable-secrets-detection-start\n\
     TEMPLATE_1 = [\n    '''<!doctype html>\n<html>\n  <head>\n    <meta name=\"viewport\"\
     \ content=\"width=device-width\">\n    <meta http-equiv=\"Content-Type\" content=\"\
     text/html; charset=UTF-8\">\n    <title>Simple Transactional Email</title>\n \
@@ -748,37 +749,51 @@ script:
     \    last_digit = abs(the_hash) % 10\n    if last_digit == 0:\n        return\
     \ 0\n    elif last_digit < 5:\n        return 1\n    elif last_digit < 8:\n  \
     \      return 2\n    else:\n        return 3\n\n\ndef create_content():\n    \"\
-    \"\"\n    Generate fake content to populate the email with\n    \"\"\"\n    details\
-    \ = fake.text(600)\n    details += '\\n'\n    for _ in range(INDICATORS_PER_INCIDENT):\n\
-    \        ipv4, url, domain = fake.ipv4_private(), fake.url(), fake.domain_name()\n\
+    \"\"\n    Generate fake content to populate the email with\n\n    Generates textual\
+    \ contents that are randomly generated and defined to include 5 random IPs, 5\
+    \ random URLs,\n    5 random sha1 hashes, 5 random sha256 hashes, 5 random md5\
+    \ hashes, 5 random email addresses, 5 random domains\n    and 100 random words.\n\
+    \n    returns:\n        The randomly generated data as a string\n    \"\"\"\n\
+    \    details = fake.text(600)\n    details += '\\n'\n    for _ in range(INDICATORS_PER_INCIDENT):\n\
+    \        ipv4, url, domain = fake.ipv4_public(), fake.url(), fake.domain_name()\n\
     \        sha1, sha256, md5 = fake.sha1(), fake.sha256(), fake.md5()\n        details\
     \ += ipv4 + ' ' + url + ' ' + domain + ' ' + sha1 + ' ' + sha256 + ' ' + md5 +\
     \ '\\n'\n\n    emails = [fake.email() for _ in range(INDICATORS_PER_INCIDENT)]\n\
     \    details += ' '.join(emails)\n    return details\n\n\ndef inject_content_into_template(plaintext):\n\
-    \    # Choose random email html template\n    choice = random.randint(0, 2)\n\
-    \    chosen_template = ''.join(EMAIL_TEMPLATES[choice])\n    html = chosen_template.format(plaintext)\n\
+    \    \"\"\"\n    Choose an email html template at random and populate the main\
+    \ textual component with randomly generated\n    content passed in the 'plaintext'\
+    \ parameter\n\n    parameter: (string) plaintext\n        The randomly generated\
+    \ content to be used in the email html\n\n    returns:\n        The html template\
+    \ populated with the randomly generated content\n    \"\"\"\n    # Choose random\
+    \ email html template\n    choice = random.randint(0, 2)\n    chosen_template\
+    \ = ''.join(EMAIL_TEMPLATES[choice])\n    html = chosen_template.format(plaintext)\n\
     \    return html\n\n\ndef create_email():\n    \"\"\"\n    Create message object\
-    \ using template and random data\n    \"\"\"\n    sender = fake.email()\n    recipient\
-    \ = fake.email()\n    cc = [fake.email() for _ in range(random.randint(0, 2))]\n\
-    \    bcc = [fake.email() for _ in range(random.randint(0, 2))]\n\n    msg = MIMEMultipart('alternative')\n\
+    \ using template and random data\n\n    returns:\n        email.Message object\
+    \ and the email as a standard dictionary\n    \"\"\"\n    sender = fake.email()\n\
+    \    recipient = fake.email()\n    cc = [fake.email() for _ in range(random.randint(0,\
+    \ 2))]\n    bcc = [fake.email() for _ in range(random.randint(0, 2))]\n    the_time\
+    \ = datetime.now()\n    received = 'from ' + fake.hostname() + ' (' + fake.ipv4_public()\
+    \ + ')\\r\\n' + 'by ' + fake.domain_word() + '.'\n    received += fake.free_email_domain()\
+    \ + ' with ' + EMAIL_PROTOCOLS[random.randint(0, len(EMAIL_PROTOCOLS) - 1)]\n\
+    \    received += '; ' + the_time.strftime('%c')\n    msg = MIMEMultipart('alternative')\n\
     \    msg['Subject'] = fake.sentence()\n    msg['From'] = sender\n    msg['Reply-To']\
     \ = sender\n    msg['To'] = recipient\n    msg['Message-ID'] = fake.uuid4()\n\
     \    msg['CC'] = ', '.join(cc) if cc else ''\n    msg['BCC'] = ', '.join(bcc)\
     \ if bcc else ''\n    msg['User-Agent'] = fake.user_agent()\n    msg['Date'] =\
-    \ datetime.now().strftime(\"%Y-%m-%dT%H:%M:%SZ\")\n\n    plaintext = create_content()\n\
-    \    html = inject_content_into_template(plaintext)\n    part1 = MIMEText(plaintext,\
-    \ 'plain')\n    part2 = MIMEText(html, 'html')\n    msg.attach(part1)\n    msg.attach(part2)\n\
-    \    email_object = {}\n    for key, val in msg.items():\n        email_object[key]\
-    \ = val\n    email_object['Text'] = plaintext\n    email_object['Body'] = html\n\
-    \    return msg, email_object\n\n\n'''MAIN FUNCTIONS'''\n\n\ndef fetch_incidents():\n\
-    \    try:\n        update_parameters()\n        last_run = 0 if not demisto.getLastRun()\
-    \ else demisto.getLastRun().get('numOfIncidentsCreated', 0)\n\n        if last_run\
-    \ > 0 and last_run > MAX_NUM_OF_INCIDENTS:\n            return\n\n        incidents\
-    \ = []\n        num_of_incidents_left_to_create = MAX_NUM_OF_INCIDENTS - last_run\n\
-    \n        if num_of_incidents_left_to_create > INCIDENTS_PER_MINUTE:\n       \
-    \     num_of_incident_to_create = INCIDENTS_PER_MINUTE\n        else:\n      \
-    \      num_of_incident_to_create = num_of_incidents_left_to_create\n\n       \
-    \ for _ in range(num_of_incident_to_create):\n            email, email_object\
+    \ the_time.strftime(\"%Y-%m-%dT%H:%M:%SZ\")\n    msg['Received'] = received\n\n\
+    \    plaintext = create_content()\n    html = inject_content_into_template(plaintext)\n\
+    \    part1 = MIMEText(plaintext, 'plain')\n    part2 = MIMEText(html, 'html')\n\
+    \    msg.attach(part1)\n    msg.attach(part2)\n    email_object = {}\n    for\
+    \ key, val in msg.items():\n        email_object[key] = val\n    email_object['Text']\
+    \ = plaintext\n    email_object['Body'] = html\n    return msg, email_object\n\
+    \n\n'''MAIN FUNCTIONS'''\n\n\ndef fetch_incidents():\n    try:\n        update_parameters()\n\
+    \        last_run = 0 if not demisto.getLastRun() else demisto.getLastRun().get('numOfIncidentsCreated',\
+    \ 0)\n\n        if last_run > 0 and last_run > MAX_NUM_OF_INCIDENTS:\n       \
+    \     return\n\n        incidents = []\n        num_of_incidents_left_to_create\
+    \ = MAX_NUM_OF_INCIDENTS - last_run\n\n        if num_of_incidents_left_to_create\
+    \ > INCIDENTS_PER_MINUTE:\n            num_of_incident_to_create = INCIDENTS_PER_MINUTE\n\
+    \        else:\n            num_of_incident_to_create = num_of_incidents_left_to_create\n\
+    \n        for _ in range(num_of_incident_to_create):\n            email, email_object\
     \ = create_email()\n            incidents.append({\n                'name': email_object.get('Subject'),\n\
     \                'details': email.as_string(),\n                'occurred': email_object.get('Date'),\n\
     \                'type': INCIDENT_TYPE,\n                'rawJSON': json.dumps(email_object)\n\
